--- a/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -6863,6 +6863,20 @@ spec:
                           type: array
                       type: object
                     type: array
+                  deploymentStrategy:
+                    description: DeploymentStrategy defines the deployment strategy
+                      to use to replace existing workspace pods with new ones. The
+                      available deployment stragies are `Recreate` and `RollingUpdate`.
+                      With the `Recreate` deployment strategy, the existing workspace
+                      pod is killed before the new one is created. With the `RollingUpdate`
+                      deployment strategy, a new workspace pod is created and the
+                      existing workspace pod is deleted only when the new workspace
+                      pod is in a ready state. If not specified, the default `Recreate`
+                      deployment strategy is used.
+                    enum:
+                    - Recreate
+                    - RollingUpdate
+                    type: string
                   disableContainerBuildCapabilities:
                     description: Disables the container build capabilities.
                     type: boolean
