feat: allow to specify IngressClassName (#1669)
* feat: allow to specify IngressClassName

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -7510,6 +7510,12 @@ spec:
                   hostname:
                     description: The public hostname of the installed Che server.
                     type: string
+                  ingressClassName:
+                    description: IngressClassName is the name of an IngressClass cluster
+                      resource. If a class name is defined in both the `IngressClassName`
+                      field and the `kubernetes.io/ingress.class` annotation, `IngressClassName`
+                      field takes precedence.
+                    type: string
                   labels:
                     additionalProperties:
                       type: string
